# pytankbattle

./: LICENSE  README.md  pyproject.toml  pytankbattle.py
.github/workflows/: build_n_release.yml  build_on_demand.yml  build_windows.yml
src/: freeze.py  pytankbattle.py
src/pytankbattle/: __init__.py  pytankbattle.py
src/pytankbattle/controller/: __init__.py  controller.py  pygamejoystick.py  pygamekeyboardmouse.py
src/pytankbattle/entities/: __init__.py  bullet.py  canon.py  collidable.py  player.py  tank.py
src/pytankbattle/map/: __init__.py
src/pytankbattle/scenes/: __init__.py  credits.py  creditsscene.py  game.py  gamescene.py  menu.py  menuscene.py  pause.py  pausescene.py  resultscene.py  scene.py
src/pytankbattle/utils/: __init__.py  consts.py  data.py  engine.py  mapstartpos.py  utils.py
