[project]
name = "pytankbattle"
authors = [
    { name="Grillo del Mal", email="grillo@delmal.cl" },
]
description = "A multiplayer battle royale tank game using the pygame engine"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License", 
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame"
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/grillo-delmal/pytankbattle"
Issues = "https://github.com/grillo-delmal/pytankbattle/issues"

[project.gui-scripts]
pytankbattle = "pytankbattle:main"

[tool.setuptools.package-data]
"pytankbattle.assets" = ["*.png"]

[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
